--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -172,7 +172,7 @@ TODO - abstract
 %----------------------------------------------------------------------------------------------------
 \section{Introduction}
 
-\> new: high-statistics data sample to complement the DS2 already presented in \cite{prl111}.
+\> new: high-statistics data sample (same fill as DS2 from \cite{prl111}).
 \>> eventually beyond dip/bumb
 \>> for the moment only what is relevant for extrapolations to $t=0$
 
@@ -189,38 +189,25 @@ Detailed description elsewhere \cite{totem-jinst} - TODO, focus on RPs 220m only
 %----------------------------------------------------------------------------------------------------
 \section{Data taking}
 
-July 2012, typical bunch population, typ. inst. luminosity, beta star, trigger settings
-
-also mention zero-bias data
-
-TODO: why DS1 not used, TODO: why DS3 and DS4 separated -- different trigger
-
-\begin{table}
-\caption{Description of the three datasets available. The RP position gives the RP approach to the beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. $\mathcal{L}_{\rm int}$ is the integrated
-luminosity for each dataset, accounting for the data-acquisition (DAQ) inefficiency. The last column shows the lowest $|t|$ values observed. TODO: make compatible with PRL111 -- elastic events before acceptance correction? t min after all cuts = left edge of the left most bin?
-}
-\label{tab:datasets}
-\begin{center}
-\vskip-3mm
-\begin{tabular}{ccccccc}\hline\hline
-    & LHC  & RP                       & bunch   & elastic         & $\mathcal{L}_{\rm int}$ & $|t|_{\rm min}$     \cr
-\omit\hss\vbox to 0pt{\vss\hbox{\ dataset\ }\vss}\hss &\multispan4 \cr
-    & fill &  position                & pairs   & events          & $\unt{\mu b^{-1}}$      & $\unt{GeV^2}$       \cr\hline
-DS2 & 2815 & $6.0\,\sigma_{\rm beam}$ & 1       & $0.40\cdot10^6$ & $34$                    & $0.85\cdot10^{-2}$  \cr
-DS3 & 2836 & $9.5\,\sigma_{\rm beam}$ & 1       & $0.22\cdot10^6$ & $25$                    & $1.85\cdot10^{-2}$  \cr
-DS4 & 2836 & $9.5\,\sigma_{\rm beam}$ & 2 to 3  & $6.74\cdot10^6$ & $735$                   & $1.83\cdot10^{-2}$  \cr\hline\hline
-\end{tabular}
-\end{center}
-\end{table}
+July 2012,
+fill 2836,
+$9.5\,\sigma_{\rm beam}$,
+2 bunches in the beginning, later (when rate decreased) one more added,
+TODO - typical bunch population,
+TODO - typ. inst. luminosity,
+$\beta^* = 90\un{m}$,
+trigger settings (also mention zero-bias data),
+little over $11\un{h}$ of data taking,
+$735\un{\mu b^{-1}}$,
+$7.2\cdot 10^6$ tagged elastic events,
+minimal $|t| = 0.027\un{GeV^2}$ % left edge of left most bin
 
 
 %----------------------------------------------------------------------------------------------------
 \section{Analysis}
 
-\> Independent analyses: datasets, diagonals
-\>> some steps done independent between bunches
+\> diagonals analysed separately, some steps done independent between bunches
 
-\> iterations ??
 
 %--------------------------------------------------
 \subsection{Event reconstruction}
