review the material in CNI section
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9282 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -188,6 +188,8 @@ General note: write a (minimal but) self-contained paper, although possibly exce
 
 \input data_taking.tex
 
+\input differential_cross_section.tex
+
 \input coulomb.tex
 
 %--------------------------------------------------
@@ -229,17 +231,21 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
-\bibitem{epl95}
-    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
 
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 
-\bibitem{epl101}
+\bibitem{epl101-el}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
+
+\bibitem{epl101-inel}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
+
+\bibitem{epl101-tot}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
 
@@ -253,22 +259,18 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
 	%doi       = "10.1007/BF01557628",
 
-
 \iffalse
-\bibitem{P2} 
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	CERN-PH-EP-2012-352
 
-\bibitem{P3} 
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	CERN-PH-EP-2012-353
 
-\bibitem{jinst}
-    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{JINST}{3}{2008}{S08007}
+\bibitem{totem-ijmp}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
+
+\bibitem{epl95}
+    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
+
 
 \bibitem{jan_thesis}
 	\Name{Ka\v spar J.}
