--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -32,4 +32,4 @@ angular range from a few mrad to about 100 mrad. The T1 telescope
 while the T2 telescope ($5.3 < |\eta| < 6.5$) is made of
 triple-GEM (Gas Electron Multipliers) chambers.
 
-A complete description of the TOTEM detector layout is given in~\cite{jinst}.
+A complete description of the TOTEM detector layout is given in~\cite{totem-jinst}.
