--- a/2013/1km paper/elastic_1km_prl.tex
+++ b/2013/1km paper/elastic_1km_prl.tex
@@ -1,25 +1,31 @@
-\documentclass[TOTEM]{cern/cernphprep}
+\documentclass[twocolumn,a4paper,superscriptaddress,preprintnumbers,showpacs,nofootinbib]{revtex4-1}
+%\documentclass[prl,twocolumn,a4paper,superscriptaddress,preprintnumbers,showpacs,nofootinbib]{revtex4-1}
+%nobibnotes,linenumbers
+
+\usepackage{amsmath}
+\usepackage{graphicx}
 
 \def\d{{\rm d}}
 \def\un#1{\,{\rm #1}}
 \def\ung#1{\quad[{\rm #1}]}
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
-
-\setbox123\hbox{\small$0$}
-\def\S{\hbox to\wd123{\hss}}
-\setbox124\hbox{\small$_{0}$}
-\def\s{\hbox to\wd124{\hss}}
-
 \def\etal{et al.}
-\def\acknowledgments{\section*{Acknowledgements}}
-\def\Name#1{\textsc{#1}, }
-\def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
 
-\def\Instline#1#2{%
-	\expandafter\write1{\string\newlabel{#1}{{#1}{}}}%
-	\hbox to\hsize{\strut\hss$^{#1}$#2\hss}
+\setbox123\hbox{$0$}
+\setbox124\hbox{$.$}
+\def\S{\hbox to\wd123{\hss}}
+\def\.{\hbox to\wd124{\hss}}
+
+\def\thanksInst#1{\unskip\footnotemark[#1]}
+
+\bgroup
+\catcode`\@=11
+
+\gdef\thanksRef#1#2{%
+    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
 }
+\egroup
 
 \def\hang{\hangindent=\parindent}
 \catcode`\>=11
@@ -31,136 +37,24 @@
 \def\>E{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{\hss}}}
 \def\>>{\par\vskip\iitskip\parindent\iitindent\indent\hang\llap{\hbox to\iitindent{\hss--\ }}}
 
-
+\def\Name#1{\textsc{#1}, }
+\def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
 
 %----------------------------------------------------------------------------------------------------
 
 \begin{document}
 
-\begin{titlepage}
-
-\renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
-
-\PHnumber{XXXX}
-\PHdate{XXXX}
-
-\EXPnumber{XXXX}
-\EXPdate{XXXX}
-
 \title{Measurement of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the 
 Coulomb-Nuclear Interference Region by the TOTEM Experiment at the CERN LHC}
 
-\ShortTitle{Meas.~of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the 
-CNI Region by TOTEM}
+\date{\today}
 
-\Collaboration{The TOTEM Collaboration}
-\ShortAuthor{The TOTEM Collaboration (G.~Antchev \emph{\etal})}
+\collaboration{The TOTEM Collaboration}
+\noaffiliation
 
-\iffalse
-\begin{Authlist}
-G.~Antchev\Aref{a},
-P.~Aspell\Iref{8},
-I.~Atanassov\IAref{8}{a},
-V.~Avati\Iref{8},
-J.~Baechler\Iref{8},
-V.~Berardi\IIref{5b}{5a},
-M.~Berretti\Iref{7b},
-E.~Bossini\Iref{7b},
-M.~Bozzo\IIref{6b}{6a},
-P.~Brogi\Iref{7b},
-E.~Br\"{u}cken\IIref{3a}{3b},
-A.~Buzzo\Iref{6a},
-F.~S.~Cafagna\Iref{5a},
-M.~Calicchio\IIref{5b}{5a},
-M.~G.~Catanesi\Iref{5a},
-C.~Covault\Iref{9},
-M.~Csan\'{a}d\IAref{4}{e},
-T.~Cs\"{o}rg\H{o}\Iref{4},
-M.~Deile\Iref{8},
-K.~Eggert\Iref{9},
-V.~Eremin\Aref{b},
-R.~Ferretti\IIref{6a}{6b},
-F.~Ferro\Iref{6a},
-A. Fiergolski\Aref{c},
-F.~Garcia\Iref{3a},
-S.~Giani\Iref{8},
-V.~Greco\IIref{7b}{8},
-L.~Grzanka\IAref{8}{d},
-J.~Heino\Iref{3a},
-T.~Hilden\IIref{3a}{3b},
-R.~A.~Intonti\Iref{5a},
-J.~Ka\v{s}par\IIref{1a}{8},
-J.~Kopal\IIref{1a}{8},
-V.~Kundr\'{a}t\Iref{1a},
-K.~Kurvinen\Iref{3a},
-S.~Lami\Iref{7a},
-G.~Latino\Iref{7b},
-R.~Lauhakangas\Iref{3a},
-T.~Leszko\Aref{c},
-E.~Lippmaa\Iref{2},
-M.~Lokaj\'{\i}\v{c}ek\Iref{1a},
-M.~Lo~Vetere\IIref{6b}{6a},
-F.~Lucas~Rodr\'{i}guez\Iref{8},
-M.~Macr\'{\i}\Iref{6a},
-T.~M\"aki\Iref{3a},
-A.~Mercadante\IIref{5b}{5a},
-N.~Minafra\Iref{8} ,
-S.~Minutoli\Iref{6a},
-F.~Nemes\IAref{4}{e},
-H.~Niewiadomski\Iref{8},
-E.~Oliveri\Iref{7b},
-F.~Oljemark\IAref{3a}{3b},
-R.~Orava\IIref{3a}{3b},
-M.~Oriunno\IAref{8}{f},
-K.~\"{O}sterberg\IIref{3a}{3b},
-P.~Palazzi\Iref{7b},
-J.~Proch\'{a}zka\Iref{1a},
-M.~Quinto\Iref{5a},
-E.~Radermacher\Iref{8},
-E.~Radicioni\Iref{5a},
-F.~Ravotti\Iref{8},
-E.~Robutti\Iref{6a},
-L.~Ropelewski\Iref{8},
-G.~Ruggiero\Iref{8},
-H.~Saarikko\IIref{3a}{3b},
-A.~Santroni\IIref{6b}{6a},
-A.~Scribano\Iref{7b},
-J.~Smajek\Iref{8},
-W.~Snoeys\Iref{8},
-J.~Sziklai\Iref{4},
-C.~Taylor\Iref{9},
-N.~Turini\Iref{7b},
-V.~Vacek\Iref{1b},
-M.~V\'itek\Iref{1b},
-J.~Welti\IIref{3a}{3b} and
-J.~Whitmore\Iref{10}
-\end{Authlist}
+\input authorlist_prl
 
-\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
-\Instline{1b}{Czech Technical University, Praha, Czech Republic.}
-\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}
-\Instline{3a}{Helsinki Institute of Physics, Finland.}
-\Instline{3b}{Department of Physics, University of Helsinki, Finland.}
-\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary.}
-\Instline{5a}{INFN Sezione di Bari, Italy.}
-\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy.}
-\Instline{6a}{Sezione INFN, Genova, Italy.}
-\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy.}
-\Instline{7a}{INFN Sezione di Pisa, Italy.}
-\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}
-\Instline{8} {CERN, Geneva, Switzerland.}
-\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}
-\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}
 
-\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
-\Anotfoot{c}{Warsaw University of Technology, Poland.}
-\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
-\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
-\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
-\fi
-
-%\newpage
 \begin{abstract}
 The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
 scattering at the centre-of-mass energy 
@@ -175,8 +69,13 @@ particular, the $\rho$-parameter, i.e. the ratio between the real and the
 imaginary parts of the forward hadronic elastic amplitude, was determined.
 \textbf{Give value here? For which case?}
 \end{abstract}
-\end{titlepage}
 
+
+\pacs{13.60.Hb}%{Total and inclusive cross sections (including deep-inelastic processes)}
+
+\preprint{CERN-PH-EP-2014-XXXX}
+
+\maketitle
 
 %--------------------------------------------------
 
@@ -204,28 +103,26 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 \> what data we have and will publish in near future?
 
 
-%--------------------------------------------------
-\acknowledgments
 
-\iffalse
+%--------------------------------------------------
+\acknowledgements
+THIS IS JUST PLACEHOLDER -----------
 We are indebted to the beam optics development team
 %({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
 for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
 %{\sc M.~Ferro-Luzzi}
 the LHC machine coordinators for scheduling the dedicated fills.
 
-We are grateful to CMS for providing their luminosity measurements.
-
 This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
 Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
 Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+----------- END OF THE PLACEHOLDER
 
-\fi
 
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
-\bibitem{jinst}
+\bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
@@ -256,6 +153,8 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
 	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
 	%doi       = "10.1007/BF01557628",
+
+\end{thebibliography}{99}
 
 \iffalse
 
@@ -313,6 +212,5 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 
 \fi
 
-\end{thebibliography}
 
 \end{document}
